1998-11-09  Tom Tromey  <tromey@cygnus.com>

	* automake.in (read_am_file): `conditional_stack' isn't a
	function.  Correctly add new value to existing value in `+='
	case.

1998-10-29  Gary V. Vaughan <gvaughan@oranda.demon.co.uk>

	* automake.in (parse_arguments): Fixed type of -c for copying

1998-10-30  Tom Tromey  <tromey@cygnus.com>

	* automake.texi (Install): Documented DESTDIR more fully.  From
	Jeff Garzik.

	* automake.in (MACRO_PATTERN): Recognize `+='.
	(BOGUS_MACRO_PATTERN): Likewise.
	(read_am_file): Handle `+=' assignments.

1998-10-28  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (maintainer-check): Changed code to be acceptable to
	bash 2.01.1.

	* automake.in (do_one_clean_target): Special-case config.status.
	Report from Jeff Garzik.

	* m4/Makefile.am (m4data_DATA): Don't mention f77.m4.
	* m4/f77.m4: Removed; macro now in autoconf proper.

1998-10-24  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_dist_worker): Typo fix in code testing to
	see if subdir is `.'.  From Raja R Harinath.

	* m4/lispdir.m4: Fixed sed invocation.  From Akim Demaille.

1998-10-20  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_dependency_file): Fixed test on `while' loop.
	Fixes depend2.test.  Report from Akim Demaille.

1998-10-16  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_ltlibraries): Specify `noinst' when
	computing valid prefixes.  From Ulrich Drepper.

	* automake.in (scan_dependency_file): Don't give an error if there
	is text after the last line.  Report from Matthew D. Langston.

	* m4/mktime.m4: Detect glibc mktime bug.  From Jim Meyering.

	* Makefile.am (SUBDIRS): Added `.' again.

	* Makefile.am (EXTRA_DIST): Removed automake.spec.in.  From
	Matthew D. Langston.
	(info_TEXINFOS): Removed am-f77.texi.

	* automake.in (handle_ltlibraries): Allow `noinst' LTLIBRARIES.
	These are libtool convenience libraries.

1998-10-13  Tom Tromey  <tromey@cygnus.com>

	* m4/f77.m4: New file.
	* m4/Makefile.am (m4data_DATA): Added f77.m4.
