@@ -5829,6 +5829,11 @@ sub read_am_file
 	    local ($type) = $2;
 	    if ($type eq '+')
 	    {
+		if (! defined $contents{$last_var_name}
+		    && defined $configure_vars{$last_var_name})
+		{
+		    $contents{$last_var_name} = '@' . $last_var_name . '@';
+		}
 		$contents{$last_var_name} .= ' ' . $value;
 	    }
 	    else
