@@ -1,3 +1,8 @@
+1998-11-10  Tom Tromey  <tromey@cygnus.com>
+
+	* automake.in (read_am_file): Handle configure_vars case.  Test
+	pluseq4.test.
+
 1998-11-09  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (read_am_file): `conditional_stack' isn't a
